force-app/main/default/objects/Quick_Links_Setting__mdt/Quick_Links_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Quick Links Setting</label>
    <pluralLabel>Quick Links Settings</pluralLabel>
</CustomObject>