force-app/main/default/objects/Quick_Links_Setting__mdt/fields/Button_Label__c.field-meta.xml
<CustomField>
    <fullName>Button_Label__c</fullName>
    <label>Button Label</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>