force-app/main/default/objects/Quick_Links_Setting__mdt/fields/Component_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Action_Type__c</fullName>
    <description>Applicable only for Components</description>
    <label>Component Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modal Popup</fullName>
                <default>true</default>
                <label>Modal Popup</label>
            </value>
            <value>
                <fullName>Navigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>