force-app/main/default/objects/Quick_Links_Setting__mdt/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <inlineHelpText>Applicable only if Navigation is Component Type</inlineHelpText>
    <label>Component Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>