force-app/main/default/objects/Quick_Links_Setting__mdt/fields/Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission__c</fullName>
    <label>Custom Permission</label>
    <length>50</length>
    <type>Text</type>
</CustomField>