force-app/main/default/objects/Quick_Links_Setting__mdt/fields/Navigation_Type__c.field-meta.xml
<CustomField>
    <fullName>Navigation_Type__c</fullName>
    <label>Navigation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>URL</fullName>
                <default>true</default>
                <label>URL</label>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>Tab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>