force-app/main/default/objects/Quick_Links_Setting__mdt/fields/Redirection_URL__c.field-meta.xml
<CustomField>
    <fullName>Redirection_URL__c</fullName>
    <label>Redirection URL</label>
    <type>Url</type>
</CustomField>