force-app/main/default/objects/Quick_Links_Setting__mdt/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>