force-app/main/default/objects/Quick_Links_Setting__mdt/fields/Tab_Name__c.field-meta.xml
<CustomField>
    <fullName>Tab_Name__c</fullName>
    <label>Tab Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>